Added a registration view, logout functionality, added all propTypes, and cleaned up the UI
Incorportated the registration view for users that haven't made an account. Added a logout link that will switch the subview to the login view. Fleshed out the UI with a consistent color palette. Made sure the propTypes were added to all necessary components working with API objects.

--- a/client/src/components/login-view/login-view.scss
+++ b/client/src/components/login-view/login-view.scss
@@ -1,5 +1,14 @@
 $blue: #05386B;
 $green: #379683;
+$background: #FFFFF0;
+
+html {
+  background-color: $background;
+}
+
+.login-view {
+  background-color: $background;
+}
 
 .login-form {
   margin: 10rem auto;
@@ -15,4 +24,17 @@ $green: #379683;
 
 .submit-button {
   background-color: $green;
+}
+
+.registration-group {
+  margin: 0 auto;
+  width: 30%;
+}
+
+.register-link {
+  text-decoration: underline;
+}
+
+.register-link:hover{
+  cursor: pointer;
 }
