Added functionality for the user to be able to go back to login from the registration page.

--- a/client/src/components/login-view/login-view.scss
+++ b/client/src/components/login-view/login-view.scss
@@ -30,8 +30,7 @@ html {
   margin: 0 auto;
   width: 30%;
 }
-
-.register-link {
+a:not([href]):not([tabindex]){
   text-decoration: underline;
 }
 
