Got the profile view working with update info, remove favorites, and deregister functionality. Also cleaned up the UI and made the navbar toggle based on whether or not the user is logged in or not.

--- a/client/src/components/profile-view/profile-view.scss
+++ b/client/src/components/profile-view/profile-view.scss
@@ -6,17 +6,49 @@ $green: #379683;
 }
 
 .profile-form {
-  margin: 10rem auto;
+  margin: 7rem auto;
   width: 30%;
   color: $green;
 }
 
+.form-buttons{
+  display: flex;
+  justify-content: space-between;
+}
+
 .myflix-title{
-  margin: 10rem auto;
+  margin: 7rem auto;
   width: 30%;
   color: $blue;
 }
 
-.submit-button {
+.update-button {
   background-color: $green;
+}
+
+.delete-button {
+  background-color: red;
+}
+
+.deregister-button {
+  margin: 7rem auto;
+  width: 30%;
+  background-color: red;
+}
+
+.favorite-movies{
+  display: flex;
+  justify-content: space-between;
+}
+
+.deregister-group {
+  margin: 1rem auto;
+  width: 30%;
+  color: $blue;
+}
+
+.deregister-list-group {
+  margin: auto;
+  width: 30%;
+  color: $blue;
 }
