Updated the proptypes, the UI, and added code to make sure the frontend can be hosted on heroku

--- a/client/src/components/genre-view/genre-view.scss
+++ b/client/src/components/genre-view/genre-view.scss
@@ -8,4 +8,9 @@ $green: #379683;
 
 .genre-view {
   margin: 0 auto;
+  font-family: 'Raleway', sans-serif;
+}
+
+.genre-name {
+  font-family: 'Josefin Sans', sans-serif;
 }
