--- a/client/src/components/movie-view/movie-view.scss
+++ b/client/src/components/movie-view/movie-view.scss
@@ -1,6 +1,12 @@
 $blue: #05386B;
 $green: #379683;
 
+.movie-view {
+  font-family: 'Raleway', sans-serif;
+}
+.movie-title {
+  font-family: 'Josefin Sans', sans-serif;
+}
 .back-button {
   background-color: $green;
   margin-top: 1rem;
