--- a/client/src/components/registration-view/registration-view.scss
+++ b/client/src/components/registration-view/registration-view.scss
@@ -3,6 +3,7 @@ $green: #379683;
 
 .registration-view {
   background-color: #FFFFF0;
+  font-family: 'Raleway', sans-serif;
 }
 
 .registration-form {
