--- a/client/src/components/director-view/director-view.scss
+++ b/client/src/components/director-view/director-view.scss
@@ -8,4 +8,9 @@ $green: #379683;
 
 .director-view {
   margin: 0 auto;
+  font-family: 'Raleway', sans-serif;
+}
+
+.director-name {
+  font-family: 'Josefin Sans', sans-serif;
 }
