--- a/client/src/components/profile-view/profile-view.scss
+++ b/client/src/components/profile-view/profile-view.scss
@@ -62,10 +62,7 @@ $green: #379683;
   color: $blue;
 }
 
-.loader {
-  font-family: 'Josefin Sans', sans-serif;
+.loader-spinner {
   margin: auto;
-  width: 30%;
   color: $blue;
-  font-size: 2rem;
 }
